apoldir = $(includedir)/apol

apol_HEADERS = \
	avl-util.h \
	avrule-query.h \
	bool-query.h \
	bst.h \
	class-perm-query.h \
	condrule-query.h \
	constraint-query.h \
	context-query.h \
	domain-trans-analysis.h \
	fscon-query.h \
	infoflow-analysis.h \
	isid-query.h \
	mls-query.h \
	netcon-query.h \
	perm-map.h \
	policy.h \
	policy-path.h \
	policy-query.h \
	range_trans-query.h \
	rbacrule-query.h \
	relabel-analysis.h \
	render.h \
	role-query.h \
	terule-query.h \
	type-query.h \
	types-relation-analysis.h \
	user-query.h \
	util.h \
	vector.h
